RESOLVED FIXED Bug 103522
Coordinated Graphics: Images disappear randomly
https://bugs.webkit.org/show_bug.cgi?id=103522
Summary Coordinated Graphics: Images disappear randomly
Kalyan
Reported 2012-11-28 06:36:58 PST
Steps to reproduce: Load the page http://media.24ways.org/2009/14/5/index.html in MiniBrowser Hover the mouse on any image. Expected result: The image is zoomed in Actual Result: Rest of the images seem to disappear randomly. If the mouse is moved away from the image, all the images re-appear. Seems to work fine with Firefox and Chrome browser.
Attachments
Not for review: Patch to help understanding. (6.04 KB, patch)
2012-11-28 16:21 PST, Dongseong Hwang
no flags
Patch (3.24 KB, patch)
2012-12-01 02:05 PST, Dongseong Hwang
no flags
Patch (3.35 KB, patch)
2012-12-01 02:21 PST, Dongseong Hwang
no flags
Kalyan
Comment 1 2012-11-28 07:09:06 PST
(In reply to comment #0) > Steps to reproduce: > > Load the page http://media.24ways.org/2009/14/5/index.html in MiniBrowser > Hover the mouse on any image. > > Expected result: > The image is zoomed in > > Actual Result: > Rest of the images seem to disappear randomly. > If the mouse is moved away from the image, all the images re-appear. > > > Seems to work fine with Firefox and Chrome browser. Images also re-appear automatically after the zoom animation has finished.
Kalyan
Comment 2 2012-11-28 07:25:49 PST
(In reply to comment #1) > (In reply to comment #0) > > Steps to reproduce: > > > > Load the page http://media.24ways.org/2009/14/5/index.html in MiniBrowser > > Hover the mouse on any image. > > > > Expected result: > > The image is zoomed in > > > > Actual Result: > > Rest of the images seem to disappear randomly. > > If the mouse is moved away from the image, all the images re-appear. > > > > > > Seems to work fine with Firefox and Chrome browser. > > Images also re-appear automatically after the zoom animation has finished. Same behaviour on Qt-MiniBrowser
Kenneth Rohde Christiansen
Comment 3 2012-11-28 09:20:11 PST
Noam says that it might be related to the direct image compositing.
Noam Rosenthal
Comment 4 2012-11-28 09:24:46 PST
(In reply to comment #3) > Noam says that it might be related to the direct image compositing. Easy way to find out: always return false from CoordinatedGraphicsLayer::shouldDirectlyCompositeImage.
Dongseong Hwang
Comment 5 2012-11-28 15:40:44 PST
(In reply to comment #4) > (In reply to comment #3) > > Noam says that it might be related to the direct image compositing. > > Easy way to find out: always return false from CoordinatedGraphicsLayer::shouldDirectlyCompositeImage. We still have flash after making CoordinatedGraphicsLayer::shouldDirectlyCompositeImage return false. However, we cannot reproduce in WK1. I think it is problem in coordinated graphics.
Dongseong Hwang
Comment 6 2012-11-28 16:21:59 PST
Created attachment 176597 [details] Not for review: Patch to help understanding. not for review: this patch helps us understand what is problem
Dongseong Hwang
Comment 7 2012-11-28 16:22:56 PST
(In reply to comment #6) > Created an attachment (id=176597) [details] > Patch > > not for review: this patch helps us understand what is problem If applying this patch, this bug is fixed. Bug I think we can find better solution.
Dongseong Hwang
Comment 8 2012-11-30 22:44:28 PST
I made it. After layout test, I'll post!
Dongseong Hwang
Comment 9 2012-12-01 02:05:53 PST
Kenneth Rohde Christiansen
Comment 10 2012-12-01 02:12:05 PST
Comment on attachment 177097 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=177097&action=review > Source/WebKit2/UIProcess/CoordinatedGraphics/LayerTreeCoordinatorProxy.cpp:97 > { > dispatchUpdate(bind(&LayerTreeRenderer::deleteLayer, m_renderer.get(), id)); > - updateViewport(); > } why is this change not explained in thechangelog
Dongseong Hwang
Comment 11 2012-12-01 02:21:26 PST
Dongseong Hwang
Comment 12 2012-12-01 02:22:42 PST
Comment on attachment 177097 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=177097&action=review >> Source/WebKit2/UIProcess/CoordinatedGraphics/LayerTreeCoordinatorProxy.cpp:97 >> } > > why is this change not explained in thechangelog It's mistake. I explain in next patch!
WebKit Review Bot
Comment 13 2012-12-02 04:50:02 PST
Comment on attachment 177098 [details] Patch Clearing flags on attachment: 177098 Committed r136341: <http://trac.webkit.org/changeset/136341>
WebKit Review Bot
Comment 14 2012-12-02 04:50:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.