Coordinated Graphics: Images disappear randomly https://bugs.webkit.org/show_bug.cgi?id=103522

Patch by Huang Dongsung <luxtella@company100.net> on 2012-12-02
Reviewed by Kenneth Rohde Christiansen.

Currently, we delete layers before synchronizing layer states of layers. It
causes flash. This patch deletes layers after the synchronization.

In addiation, this patch removes updateViewport() in
LayerTreeCoordinatorProxy::deleteCompositingLayer() because
LayerTreeCoordinatorProxy::didRenderFrame() is always called after
deleting layers.

* UIProcess/CoordinatedGraphics/LayerTreeCoordinatorProxy.cpp:
(WebKit::LayerTreeCoordinatorProxy::deleteCompositingLayer):
* WebProcess/WebPage/CoordinatedGraphics/LayerTreeCoordinator.cpp:
(WebKit::LayerTreeCoordinator::flushPendingLayerChanges):

Canonical link: https://commits.webkit.org/121935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136341 268f45cc-cd09-0410-ab3c-d52691b4dbfc